package bridgeMode;

public class BigPen extends Pen{
    @Override
    public void draw(String name) {
        String penType="űʻ";
        this.color.bepaint(penType,name);
    }
}