package bridgeMode;

public class Blue implements Color {
    @Override
    public void bepaint(String penType, String name) {
        System.out.println(penType+"ɫ"+name+".");
    }
}