package bridgeMode;

public class MiddlePen extends Pen{
    @Override
    public void draw(String name) {
        String penType="кűʻ";
        this.color.bepaint(penType,name);
    }
}
