package bridgeMode;

public class SmallPen extends Pen{
    @Override
    public void draw(String name) {
        String penType="Сűʻ";
        this.color.bepaint(penType,name);
    }
}
